# PyCoMo

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: deploy_docs.yml
data/use_case/henson/: Actinomyces_naeslundii_str_Howell_279.xml  Fusobacterium_nucleatum_subsp_nucleatum_ATCC_25586.xml  Gemella_haemolysans_ATCC_10379.xml  Granulicatella_adiacens_ATCC_49175.xml  Haemophilus_influenzae_R2846.xml  Neisseria_flavescens_SK114.xml  Porphyromonas_endodontalis_ATCC_35406.xml  Prevotella_melaninogenica_ATCC_25845.xml  Pseudomonas_aeruginosa_NCGM2_S1.xml  Ralstonia_sp_5_7_47FAA.xml  Rothia_mucilaginosa_DY_18.xml  Staphylococcus_aureus_subsp_aureus_USA300_FPR3757.xml  Streptococcus_sanguinis_SK36.xml  Veillonella_atypica_ACS_049_V_Sch6.xml  henson_medium.csv  henson_medium_species_constraints.csv  henson_medium_tables3.xlsx
data/use_case/koch/: dv.xml  mb.xml  mh.xml
data/use_case/toy_models/: toy_1.xml  toy_2_2.xml
docs/: requirements.txt
docs/source/: PyCoMo_basics.ipynb  classes.rst  cli.rst  conf.py  cyclebreaker.rst  discretized_growth.rst  discretized_growth_tutorial.ipynb  efmtool_interface.rst  helper.rst  index.rst  installation.rst  logger.rst  loopless_fva_tutorial.ipynb  max_growth_rate_tutorial.ipynb  multiprocess.rst  spawnprocesspool.rst  utils.rst
pycomo/: cli.py  pycomo.py  utils.py
src/pycomo/: __init__.py  _version.py  pycomo_models.py
src/pycomo/helper/: cli.py  cyclebreaker.py  discretized_growth.py  efmtool_interface.py  logger.py  multiprocess.py  spawnprocesspool.py  utils.py
src/pycomo/milp/: community_model_milp.py  milp_helper.py
test/: README.txt  test_pycomo_cli.py  test_pycomo_communitymodel.py  test_pycomo_doall.py  test_pycomo_multiprocess.py  test_pycomo_singleorganismmodel.py  test_pycomo_utils.py
test/data/: koch_com_model.xml
test/data/output/: max_growth_rate.csv
test/data/output/doall_fva/: community_model_fva_flux.csv  community_model_fva_interaction_flux.csv
tutorial/: PyCoMo_basics.html  PyCoMo_basics.ipynb  PyCoMo_basics.py  PyCoMo_fix_validation bug.ipynb  cyclebreaker_tutorial.ipynb  discretize_growth_tutorial.ipynb  loopless_fva_tutorial.ipynb  max_growth_rate_tutorial.ipynb
